New: placeholder on input box

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         height: 35px;
         font-size: medium;
       }
+      #btn2 {
+        text-align: center;
+        margin-left: 5px;
+        width: 120px;
+        height: 35px;
+        font-size: medium;
+      }
       li {
         font-family: sans-serif;
         margin-top: 5px;
@@ -28,7 +35,10 @@
     </style>
   </head>
   <body>
-    <input type="text" id="inputBox" required /><button id="btn">Add</button>
+    <input type="text" id="inputBox" placeholder="Todo" /><button id="btn">
+      Add
+    </button>
+    <button id="btn2">Clear All</button>
 
     <ul id="list"></ul>
     <script src="app.js"></script>
